--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
         "@angular/http": "4.4.3",
         "@angular/platform-browser": "4.4.3",
         "@angular/platform-browser-dynamic": "4.4.3",
-        "@ionic-native/android-permissions": "^4.3.0",
-        "@ionic-native/background-mode": "^4.3.0",
+        "@ionic-native/android-permissions": "^4.7.0",
+        "@ionic-native/background-mode": "^4.7.0",
         "@ionic-native/core": "3.12.1",
-        "@ionic-native/device-motion": "^4.3.0",
-        "@ionic-native/gyroscope": "^4.3.0",
+        "@ionic-native/device-motion": "^4.7.0",
+        "@ionic-native/gyroscope": "^4.7.0",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
-        "cordova-android": "^6.2.3",
+        "cordova-android": "^6.4.0",
         "cordova-browser": "^4.1.0",
         "cordova-plugin-android-permissions": "^1.0.0",
         "cordova-plugin-background-mode": "^0.7.2",
-        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-device-motion": "^1.2.5",
         "cordova-plugin-gyroscope": "^0.1.4",
         "cordova-plugin-ringermode": "0.0.6",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -45,7 +45,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
-        "typescript": "2.3.4"
+        "typescript": "2.3.4",
+        "hoek": "^4.2.1"
     },
     "description": "The project is trying to face an issue that I (and perhaps others are, too) am struggling with: being too lazy to switch the phone's profile from sound/vibration (when outside) to silent (when at work or sleeping).",
     "cordova": {
